src/objects/Patient_Demographics__c.object
<CustomObject>
    <description>Patient Demographics from Member</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Patient_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acne_c__c</fullName>
        <label>Acne %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AffidavitTraffic__c</fullName>
        <label>Affidavit Traffic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alzheimers__c</fullName>
        <label>% Alzheimers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AnkylosingSpondylitis__c</fullName>
        <label>% Ankylosing Spondylitis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anyaffidavitquestionsanswered__c</fullName>
        <label>Any affidavit questions answered?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Askaboutallergies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about allergies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutbackpain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about back pain?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutcold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about cold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutconstipation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about constipation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutflu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about flu?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutgastrointestinalissues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about gastrointestinal issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutindigestionheartburn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about indigestion/heart burn?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutmigraines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about migraines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutmusclepain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about muscle pain?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutpainrelatedproducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about pain related products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutsinuscongestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about sinus congestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Askaboutskincareproducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask about skin care products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvgTotalTrafficLast12Months__c</fullName>
        <label>AvgTotal Traffic - Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_PT_Wait_Time__c</fullName>
        <label>Avg. PT Wait-Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avgwaitmin__c</fullName>
        <label>Avg. wait (min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BringMoreThanOne__c</fullName>
        <label>% Bring More Than One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <formula>Account__r.CMHID__c</formula>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cholesterol__c</fullName>
        <label>% Cholesterol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chron_s_Disease__c</fullName>
        <label>% Chron&apos;s Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>Date Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Depression__c</fullName>
        <label>% Depression</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DidOfficeAnswerEMREHRQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Office Answer EMR/EHR Question?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_Office_Answer_EMR_EHR_Question_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Office Answer EMR/EHR Question?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DidtheyrespondtoInsulinPumpsurveys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did they respond to Insulin Pump surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMREHRSystem__c</fullName>
        <label>EMR/EHR System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMR_EHR_System2__c</fullName>
        <label>EMR/EHR System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epilepsy__c</fullName>
        <label>% Epilepsy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Eyeconditions__c</fullName>
        <label>% Eye Conditions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fibromyalgia__c</fullName>
        <label>% Fibromyalgia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Footcare__c</fullName>
        <label>% Foot Care</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GERD__c</fullName>
        <label>% GERD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gout__c</fullName>
        <label>% Gout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Headaches__c</fullName>
        <label>% Headaches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Heartburn__c</fullName>
        <label>% Heartburn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hepatitis_C__c</fullName>
        <label>% Hepatitis C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hypertension__c</fullName>
        <label>% Hypertension</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IBS__c</fullName>
        <label>% IBS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ImmuneSystemDisorders__c</fullName>
        <label>% Immune System Disorders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JerrytheBearParticipant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jerry the Bear Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KaysNaturalSampleParticipant__c</fullName>
        <label>Kay&apos;s Natural Sample Participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kidneydisease__c</fullName>
        <label>% Kidney Disease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lupus__c</fullName>
        <label>% Lupus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MS__c</fullName>
        <label>MS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Melanoma_c__c</fullName>
        <label>Melanoma %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MemPracMinRecIDEMAILAccountIDStatus2__c</fullName>
        <label>MemPracMinRecIDEMAILAccountIDStatus2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracMinRecIDEMAILAccountIDStatus__c</fullName>
        <label>MemPracMinRecIDEMAILAccountIDStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeContactName__c</fullName>
        <label>Member Practice - Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeLastModifiedBy__c</fullName>
        <label>Member Practice - Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeNetwork2__c</fullName>
        <label>Member Practice - Network #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeNetworkBanner1__c</fullName>
        <label>Member Practice - Network Banner #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeNetworkBanner2__c</fullName>
        <label>Member Practice - Network Banner #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeNetworkBanner3__c</fullName>
        <label>Member Practice - Network Banner #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeOfficeSpecialty__c</fullName>
        <label>Member Practice - Office Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticePediatricFormula__c</fullName>
        <label>Member Practice - Pediatric Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeRmSte__c</fullName>
        <label>Member Practice - Rm/Ste #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeAdj_ScreenCount__c</fullName>
        <label>Member practice - Adj_ScreenCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeAprilAffidavits__c</fullName>
        <label>Member practice - April Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeBroadBandSystem__c</fullName>
        <label>Member practice - BroadBand  System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeCity__c</fullName>
        <label>Member practice - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeCountstowards__c</fullName>
        <label>Member practice - Counts toward #s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeCurrentStage__c</fullName>
        <label>Member practice - Current Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeDHNID__c</fullName>
        <label>Member practice - DHN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeDateUninstalled__c</fullName>
        <label>Member practice - Date Uninstalled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MemberpracticeFax__c</fullName>
        <label>Member practice - Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MemberpracticeFebruaryAffidavits__c</fullName>
        <label>Member practice - February Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeInstitution__c</fullName>
        <label>Member practice - Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeJanuaryAffidavits__c</fullName>
        <label>Member practice - January Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeJuneAffidavits__c</fullName>
        <label>Member practice - June Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeMSE__c</fullName>
        <label>Member practice - MSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeMarchAffidavits__c</fullName>
        <label>Member practice - March Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeMayAffidavits__c</fullName>
        <label>Member practice - May Affidavits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeNetwork__c</fullName>
        <label>Member practice - Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeNumberofScreens__c</fullName>
        <label>Member practice - Number of Screens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticePediatric2__c</fullName>
        <label>Member practice - Pediatric2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticePhone__c</fullName>
        <label>Member practice - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MemberpracticePrimaryName__c</fullName>
        <label>Member practice - Primary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeScreenSize__c</fullName>
        <label>Member practice - Screen Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeState__c</fullName>
        <label>Member practice - State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeStreet__c</fullName>
        <label>Member practice - Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeZip__c</fullName>
        <label>Member practice - Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memberpracticeadj_screencounttest__c</fullName>
        <label>Member practice - adj_screencount test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MempracMinRecIDEMAILADDRAcctIDSpec__c</fullName>
        <label>MempracMinRecIDEMAILADDRAcctIDSpec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MempracMinRecIDEMAILADDRAcctIDSpecialty3__c</fullName>
        <label>MempracMinRecIDEMAILADDRAcctIDSpecialty3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MempracMinRecIDEMAILADDRAcctIDSpecialty4__c</fullName>
        <label>MempracMinRecIDEMAILADDRAcctIDSpecialty4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migraine__c</fullName>
        <label>Migraine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NumPrescribers__c</fullName>
        <label>Num. Prescribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficeAnswerEMREHRQuestion2__c</fullName>
        <label>Office Answer EMR/EHR Question?2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Osteoarthritis__c</fullName>
        <label>% Osteoarthritis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherCardiac__c</fullName>
        <label>% Other Cardiac</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherDiabetes__c</fullName>
        <label>% Other Diabetic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherGI__c</fullName>
        <label>% Other GI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherNeuro__c</fullName>
        <label>% Other Neuro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherRheum__c</fullName>
        <label>% Other Rheumatic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OtherSelection__c</fullName>
        <label>Other (Selection)</label>
        <picklist>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thyroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatrics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>% Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parkinsons__c</fullName>
        <label>% Parkinsons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PatientsDiscussInsulinPumps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patients Discuss Insulin Pumps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pct17andunder__c</fullName>
        <label>% 17 and under</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct1834__c</fullName>
        <label>% 18-34</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct3554__c</fullName>
        <label>% 35-54</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct5564__c</fullName>
        <label>% 55-64</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct65plus__c</fullName>
        <label>% 65 plus</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctAccompaniedbyCaregiver__c</fullName>
        <label>% Accompanied by Caregiver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctAfricanAmerican__c</fullName>
        <label>% African American</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctAsianAmerican__c</fullName>
        <label>% Asian American</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctCaucasian__c</fullName>
        <label>% Caucasian</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctDiabetes__c</fullName>
        <label>% Diabetes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctFemale__c</fullName>
        <label>% Female</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctHispanic__c</fullName>
        <label>% Hispanic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctMale__c</fullName>
        <label>% Male</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctMedicaid__c</fullName>
        <label>% Medicaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctMedicare__c</fullName>
        <label>% Medicare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctNationalityOther__c</fullName>
        <label>% Nationality Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctNativeAmerican__c</fullName>
        <label>% Native American</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctOsteo__c</fullName>
        <label>% Osteo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctOther__c</fullName>
        <label>% Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctPatientsvisit2month__c</fullName>
        <label>% Patients visit 2+/month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctPrivateInsurance__c</fullName>
        <label>% Private Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctSelfPay__c</fullName>
        <label>% Self Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctThyroid__c</fullName>
        <label>% Thyroid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctType1__c</fullName>
        <label>% Type 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PctType2__c</fullName>
        <label>% Type 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pctreceiveprimarycarehere__c</fullName>
        <label>% receive primary care here</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Psoriasis_c__c</fullName>
        <label>Psoriasis %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PsoriaticArthritis__c</fullName>
        <label>% Psoriatic Arthritis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pulmonarydisorders__c</fullName>
        <label>% Pulmonary disorders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA__c</fullName>
        <label>% RA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RHN_17andUnder__c</fullName>
        <label>RHN_% 17 and Under</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RHN_1834__c</fullName>
        <label>RHN_% 18-34</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_3554__c</fullName>
        <label>RHN_% 35-54</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_5564__c</fullName>
        <label>RHN_% 55-64</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_65Plus__c</fullName>
        <label>RHN_% 65 Plus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_AfricanAmerican__c</fullName>
        <label>RHN_% African American</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_AsianAmerican__c</fullName>
        <label>RHN_% Asian American</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_AvgWaitmin__c</fullName>
        <label>RHN_Avg. Wait (min.)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Caucasian__c</fullName>
        <label>RHN_% Caucasian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Female__c</fullName>
        <label>RHN_% Female</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Hispanic__c</fullName>
        <label>RHN_% Hispanic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Male__c</fullName>
        <label>RHN_% Male</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Medicaid__c</fullName>
        <label>RHN_% Medicaid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Medicare__c</fullName>
        <label>RHN_% Medicare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_NationalityOther__c</fullName>
        <label>RHN_% Nationality Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_NativeAmerican__c</fullName>
        <label>RHN_% Native American</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Noofphysicians__c</fullName>
        <label>RHN_No. of physicians</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Osteoporosis__c</fullName>
        <label>RHN_% Osteoporosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_OtherNotes__c</fullName>
        <label>RHN_% Other - Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Other__c</fullName>
        <label>RHN_% Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Patientsvisit2month__c</fullName>
        <label>RHN_% Patients visit 2+/month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_PrivateInsurance__c</fullName>
        <label>RHN_% Private Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_SelfPay__c</fullName>
        <label>RHN_% Self Pay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_SitehasInfusionRoom__c</fullName>
        <label>RHN_Site has Infusion Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_Traffic__c</fullName>
        <label>RHN_Traffic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RHN_accompaniedbycaregiver__c</fullName>
        <label>RHN_% accompanied by caregiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Record ID#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordOwner__c</fullName>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedMemberpractice__c</fullName>
        <label>Related Member practice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RheumTest1__c</fullName>
        <label>RheumTest1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RheumTest2__c</fullName>
        <label>RheumTest2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rosacea_c__c</fullName>
        <label>Rosacea %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SjogrensSyndrome__c</fullName>
        <label>% Sjogren&apos;s Syndrome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sleep_Disorders__c</fullName>
        <label>Sleep Disorders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StrokePostStroke__c</fullName>
        <label>Stroke/Post-Stroke</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stroke__c</fullName>
        <label>Stroke</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Traffic__c</fullName>
        <label>Traffic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2withBMI30__c</fullName>
        <label>Type2 with BMI &gt; 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ulcerative_Colitis__c</fullName>
        <label>% Ulcerative Colitis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wereanyofthebelowsanswered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Were any of the below ?&apos;s answered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatbrandorbrandsofInsulinpumps__c</fullName>
        <label>What brand or brands of Insulin pumps?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Patient Demographics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>NumPrescribers__c</columns>
        <columns>Traffic__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Stats</label>
    </listViews>
    <nameField>
        <displayFormat>Demographics-{000000}</displayFormat>
        <label>Patient Demographics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>